--- a/view/src/app/app.component.html
+++ b/view/src/app/app.component.html
@@ -38,13 +38,13 @@
            data-filter-item="af">
           Generate Random Points
         </a>
-        <a (click)="drawMinimumCircleDiameter()" class="list-group-item list-group-item-action" href="#" data-filter-item="af">
+        <a (click)="showMinimumCircleDiameter()" class="list-group-item list-group-item-action" href="#" data-filter-item="af">
           Minimum Circle diameter
         </a>
-        <a (click)="drawMinimumCircle()" class="list-group-item list-group-item-action" href="#" data-filter-item="af">
+        <a (click)="showMinimumCircle()" class="list-group-item list-group-item-action" href="#" data-filter-item="af">
           Minimum Circle
         </a>
-        <a (click)="drawMinimumConvexEnvelope()" class="list-group-item list-group-item-action" href="#" data-filter-item="af">
+        <a (click)="showConvexEnvelope()" class="list-group-item list-group-item-action" href="#" data-filter-item="af">
           Convex envelope
         </a>
         <a (click)="clearCanvas()" class="list-group-item list-group-item-action" href="#" data-filter-item="af">
